#############################################################################
# $Id: CMakeLists.txt 567665 2018-07-23 12:58:02Z gouriano $
#############################################################################

#NCBI_add_subdirectory(reference_allele_fix shift)

#add_subdirectory(reference_allele_fix)
#add_subdirectory(shift)
